--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center min-h-screen">
+<div class="flex flex-col justify-center items-center min-h-screen">
     <form (ngSubmit)="onSubmit()" #loginForm="ngForm" class="w-1/2 space-y-6">
         <h1 class="text-3xl font-bold text-center">Login</h1>
         <div class="form-group">
@@ -13,8 +13,14 @@
                 class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
         </div>
         <button type="submit"
-            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Login</button>
+            class="w-full flex justify-center py-2 mt-4 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Login</button>
         <!-- <div *ngIf="errorMessage" class="mt-2 text-red-500 text-sm">{{ errorMessage }}</div> -->
     </form>
+    @if(loading){
+    <div class="mt-4"> <img src="assets/Skateboarding.gif" alt="Loading...">
+        <span class="sr-only">Loading...</span>
+    </div>
+    }
+
     <!-- <div (click)="forgetPassword()">Forget Password</div> -->
 </div>
