--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,45 +1,45 @@
-<div class="register-form bg-gradient-to-r from-blue-200  p-4 rounded-lg shadow-lg">
+<div class="register-form my-6">
   <form (ngSubmit)="onSubmit()" #registerForm="ngForm"
-    class="md:w-1/2 lg:w-1/4 xs:w-full space-y-4  m-auto pt-4 shadow-md bg-white p-4 rounded">
+    class="md:w-1/2 lg:w-1/4 xs:w-full space-y-4  m-auto pt-4 shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] bg-white p-4 rounded">
     <h1 class="text-3xl font-bold text-center">Register</h1>
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="name" class="text-sm font-medium text-gray-700">Name:</label>
       <input type="text" id="name" required [(ngModel)]="user.name" name="name" class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="age" class="text-sm font-medium text-gray-700">Age:</label>
       <input type="number" id="age" required [(ngModel)]="user.age" name="age" class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="mobile" class="text-sm font-medium text-gray-700">Mobile:</label>
       <input type="text" id="mobile" [(ngModel)]="user.mobile" name="mobile" class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="email" class="text-sm font-medium text-gray-700">Email:</label>
       <input type="email" id="email" required [(ngModel)]="user.email" name="email" class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="address" class="text-sm font-medium text-gray-700">Address:</label>
       <input type="text" id="address" [(ngModel)]="user.address" name="address" class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="aadharCardNumber" class="text-sm font-medium text-gray-700">Aadhar Card Number:</label>
       <input type="number" id="aadharCardNumber" required [(ngModel)]="user.aadharCardNumber" name="aadharCardNumber"
         class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="password" class="text-sm font-medium text-gray-700">Password:</label>
       <input type="password" id="password" required [(ngModel)]="user.password" name="password"
         class="bg-gray-100 p-2 rounded-md">
     </div>
 
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col my-4">
       <label for="role" class="text-sm font-medium text-gray-700">Role:</label>
       <select id="role" [(ngModel)]="user.role" name="role" class="bg-gray-100 p-2 rounded-md">
         <option value="voter">Voter</option>
